<resources>
    <string name="app_name" translatable="false">First</string>
    <string name="text1" translatable="false">すべて終了しました</string>
    <string name="text2" translatable="false">赵梵宇</string>

    <string name="switch1" translatable="false">修改汇率</string>

    <string name="tname" translatable="false">TeamA</string>
    <string name="tsc" translatable="false">0</string>
    <string name="tnameb" translatable="false">TeamB</string>
    <string name="tscb" translatable="false">0</string>

    <string name="j3" translatable="false">+3 POINTS</string>
    <string name="j2" translatable="false">+2 POINTS</string>
    <string name="j1" translatable="false">+1 POINTS</string>
    <string name="clear" translatable="false">RESET</string>
    <string name="stob" translatable="false">切换页面</string>
    <string name="j3b" translatable="false">+3 POINTS</string>
    <string name="j2b" translatable="false">+2 POINTS</string>
    <string name="j1b" translatable="false">+1 POINTS</string>


    <string name="but1" translatable="false">转换为华氏温度</string>
    <string name="inp1" translatable="false">输入摄氏温度</string>
    <string name="text3" translatable="false">结果为：</string>


    <string name="rmb" translatable="false">INPUT RMB</string>
    <string name="button_changerate" translatable="false">修改汇率</string>
    <string name="button_returnrate" translatable="false">确认修改</string>
    <string name="showrate" translatable="false"></string>
    <string name="dollar" translatable="false">Dollar</string>
    <string name="euro" translatable="false">Euro</string>
    <string name="con" translatable="false">Con</string>
    <string name="hint_editdollar" translatable="false">修改美元汇率</string>
    <string name="hint_editeuro" translatable="false">修改欧元汇率</string>
    <string name="hint_editcon" translatable="false">修改韩元汇率</string>
    <string name="rateswitch2" translatable="false">汇率列表</string>

    <string name="rdo_home_label">首页</string>
    <string name="rdo_func_label">功能</string>
    <string name="rdo_setting_label">设置</string>
</resources>
