<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tname"
        android:text="@string/tname"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/tsc"
        android:text="@string/tsc"
        android:textSize="80dp"
        android:gravity="center"
        android:layout_marginBottom="35dp"
        android:layout_width="match_parent"
        android:layout_height="100dp" />


    <Button
        android:id="@+id/j3"
        android:text="@string/j3"
        android:textSize="27dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/j2"
        android:text="@string/j2"
        android:textSize="27dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/j1"
        android:text="@string/j1"
        android:textSize="27dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="80dp"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/clear"
        android:text="@string/clear"
        android:textSize="27dp"
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:layout_height="60dp" />

</LinearLayout>
