<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".RateCalcActivity">

    <TextView
        android:id="@+id/text_ratecalc_title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/rmb"
        android:layout_height="wrap_content"
        android:id="@+id/edit_ratecalc"/>

    <TextView
        android:id="@+id/text_ratecalc_result"
        android:layout_width="match_parent"
        android:text="@string/showrate"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_height="wrap_content" />

</LinearLayout>