<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/Linear1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameActivity">

    <fragment
        android:id="@+id/fragment_main"
        android:name="cn.edu.swufe.first.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"/>

    <fragment
        android:id="@+id/fragment_func"
        android:name="cn.edu.swufe.first.FuncFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"/>

    <fragment
        android:id="@+id/fragment_setting"
        android:name="cn.edu.swufe.first.SettingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"/>

    <RadioGroup
        android:id="@+id/bottomGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHome"
            android:text="@string/rdo_home_label"
            style="@style/rg_btn_style"
            android:drawableTop="@drawable/home32px"/>
        <RadioButton
            android:id="@+id/radioFunc"
            android:text="@string/rdo_func_label"
            style="@style/rg_btn_style"
            android:drawableTop="@drawable/zoo32px"/>
        <RadioButton
            android:id="@+id/radioSetting"
            android:text="@string/rdo_setting_label"
            style="@style/rg_btn_style"
            android:drawableTop="@drawable/setting32px"/>




    </RadioGroup>

</LinearLayout>